package com.eug.swapz

enum class AppRoutes(val value: String) {
    INTRO("Intro"),
    LOGIN("Login"),
    REGISTER("Register"),
    MAIN("Main"),
    ARTICLE_DETAIL("ArticleDetail"),
    ADD_ARTICLE("AddArticle"),
    INVENTORY("Inventory"),
    FILTER("Filter"),
    CHAT("Chat"),
    CHAT_EXCHANGE("ChatExchange"),
    CHAT_LIST("ChatList"),
    EDIT_ARTICLE("EditArticle")
}